--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node":"0.11.16"
+    "node": "0.11.16"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -22,13 +22,17 @@
   "dependencies": {
     "ejs": "^2.4.1",
     "express": "^4.13.4",
+    "history": "^2.0.1",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
     "react-router": "^2.0.1"
   },
   "devDependencies": {
     "babel-cli": "^6.6.5",
+    "babel-core": "^6.7.4",
+    "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0"
+    "babel-preset-react": "^6.5.0",
+    "webpack": "^1.12.15"
   }
 }
